--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "home": "https://emilianashahira.github.io/youtube/home",
+  "home": "https://emilianashahira.github.io/youtube/",
   "name": "youtube",
   "version": "0.0.0",
   "scripts": {
